--- a/stack/Makefile
+++ b/stack/Makefile
@@ -1,2 +1,2 @@
 all:
-	gcc ./stack_const.c ./stack_ctor.c ./stack_dtor.c ./stack_debug_func.c ./stack_push.c ./stack_pop.c ./stack_hash.c ./main.c
+	gcc ./stack_const.c ./stack_ctor.c ./stack_dtor.c ./stack_debug_func.c ./stack_push.c ./stack_pop.c ./stack_hash.c ./main.c -o main.exe
